# VRproj-U

./: README.md
CVTests/CannyDetWCamNCircleAverage/: CMakeCache.txt  CMakeLists.txt  CannyDetector_demo  CannyDetector_demo.cpp  Makefile  cmake_install.cmake
CVTests/CannyDetWCamNFloodAverage/: .CannyDetector_demo.swp  CMakeCache.txt  CannyDetector_demo  CannyDetector_demo.cpp  FrameGrabber.cpp  Makefile  cmake_install.cmake  sobol.cpp
CVTests/CannyDetWCircleAverage/: CMakeCache.txt  CannyDetector_demo  CannyDetector_demo.cpp  Makefile  cmake_install.cmake
CVTests/CannyDetWFlood/: CMakeCache.txt  CannyDetector_demo  CannyDetector_demo.cpp  Makefile  cmake_install.cmake
PiSideTests/PotraceImage/: CMakeCache.txt  CMakeLists.txt  CannyDetector_demo  CannyDetector_demo.cpp  Makefile  cmake_install.cmake  test.eps
PiSideTests/pngquantTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Progress/: .hidden  Bibliography.bib  Thesis.aux  Thesis.blg  Thesis.lof  Thesis.tex  Thesis.toc
Report/: .Thesis.cls.swp  .Thesis.tex.swp  Bibliography.bib  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.cls  Thesis.fdb_latexmk  Thesis.fls  Thesis.lof  Thesis.out  Thesis.tex  Thesis.toc
ReportTemplate/: Thesis.tex
Rover/: CameraPlate.SLDPRT  CameraPlate.STL  MattoMount.SLDPRT  MattoMount.STL  MotorMount1.SLDPRT  MotorMount1.STL  MotorMount2.SLDPRT  MotorMount2.STL  TopPlate.dxf
UDPTests/CamReceive/: CMakeCache.txt  CMakeLists.txt  CannyDetector_demo  CannyDetector_demo.cpp  Makefile  cmake_install.cmake
UDPTests/CamSendThreaded/: CMakeCache.txt  CMakeLists.txt  CannyDetector_demo  CannyDetector_demo.cpp  FloodFill.cpp  FloodFill.h  Makefile  cmake_install.cmake  compressor.cpp  compressor.h
UnrealStuff/: M_Webcam.uasset
(+324 files in other folders)
